--- a/app/src/main/res/xml/nav_auth.xml
+++ b/app/src/main/res/xml/nav_auth.xml
@@ -5,11 +5,12 @@
     android:id="@+id/nav_auth"
     app:startDestination="@id/loginFragment">
 
+    <!-- LOGIN Y REGISTRO -->
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.inmueblecheck.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
@@ -24,11 +25,12 @@
             app:popUpTo="@id/nav_auth"
             app:popUpToInclusive="true" />
     </fragment>
+
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.inmueblecheck.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" >
+        tools:layout="@layout/fragment_register">
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment"
@@ -36,65 +38,66 @@
             app:popUpToInclusive="true" />
     </fragment>
 
-    <!-- App del Gerente -->
+    <!-- DASHBOARD ARRENDADOR  -->
     <fragment
         android:id="@+id/gerenteDashboardFragment"
         android:name="com.example.inmueblecheck.GerenteDashboardFragment"
-        android:label="Gerente"
-        tools:layout="@layout/fragment_gerente_dashboard" >
+        android:label="Mis Propiedades"
+        tools:layout="@layout/fragment_gerente_dashboard">
         <action
-            android:id="@+id/action_gerenteDashboardFragment_to_crearInspeccionFragment"
-            app:destination="@id/crearInspeccionFragment" />
-
+            android:id="@+id/action_gerenteDashboardFragment_to_crearInmuebleFragment"
+            app:destination="@id/crearInmuebleFragment" />
+        <!-- Nueva acción para ver detalle -->
         <action
-            android:id="@+id/action_gerenteDashboardFragment_to_gerenteDetalleFragment"
-            app:destination="@id/gerenteDetalleFragment" />
+            android:id="@+id/action_gerente_to_detalle"
+            app:destination="@id/detalleInmuebleFragment" />
     </fragment>
-    <dialog
-        android:id="@+id/crearInspeccionFragment"
-        android:name="com.example.inmueblecheck.CrearInspeccionFragment"
-        android:label="Crear Inspección"
-        tools:layout="@layout/dialog_crear_inspeccion" />
 
-    <!-- Agente -->
+    <!-- CREAR INMUEBLE -->
+    <fragment
+        android:id="@+id/crearInmuebleFragment"
+        android:name="com.example.inmueblecheck.CrearInmuebleFragment"
+        android:label="Publicar Inmueble"
+        tools:layout="@layout/fragment_crear_inmueble" />
+
+    <!-- EDITAR INMUEBLE -->
+    <argument
+        android:name="editInmuebleId"
+        app:argType="string"
+        app:nullable="true"
+        android:defaultValue="@null" />
+
+    <!-- DASHBOARD ARRENDATARIO -->
     <fragment
         android:id="@+id/agenteDashboardFragment"
         android:name="com.example.inmueblecheck.AgenteDashboardFragment"
-        android:label="fragment_agente_dashboard"
-        tools:layout="@layout/fragment_agente_dashboard" >
+        android:label="Catálogo"
+        tools:layout="@layout/fragment_agente_dashboard">
         <action
-            android:id="@+id/action_agenteDashboardFragment_to_detalleInspeccionFragment"
-            app:destination="@id/detalleInspeccionFragment" />
-
-        <action
-            android:id="@+id/action_agenteDashboardFragment_to_crearInspeccionFragment"
-            app:destination="@id/crearInspeccionFragment" />
+            android:id="@+id/action_agente_to_detalle"
+            app:destination="@id/detalleInmuebleFragment" />
     </fragment>
 
+    <!-- DETALLE DEL INMUEBLE  -->
     <fragment
-        android:id="@+id/detalleInspeccionFragment"
-        android:name="com.example.inmueblecheck.DetalleInspeccionFragment"
-        android:label="fragment_detalle_inspeccion"
-        tools:layout="@layout/fragment_detalle_inspeccion" >
+        android:id="@+id/detalleInmuebleFragment"
+        android:name="com.example.inmueblecheck.DetalleInmuebleFragment"
+        android:label="Detalle"
+        tools:layout="@layout/fragment_detalle_inmueble">
         <argument
-            android:name="inspectionId"
-            app:argType="string" />
-        <argument
-            android:name="direccion"
+            android:name="inmuebleId"
             app:argType="string" />
     </fragment>
 
     <fragment
-        android:id="@+id/gerenteDetalleFragment"
-        android:name="com.example.inmueblecheck.GerenteDetalleFragment"
-        android:label="Detalle de Inspección"
-        tools:layout="@layout/fragment_gerente_detalle" >
-        <argument
-            android:name="inspectionId"
-            app:argType="string" />
-        <argument
-            android:name="direccion"
-            app:argType="string" />
-    </fragment>
+        android:id="@+id/mapaFragment"
+        android:name="com.example.inmueblecheck.MapaFragment"
+        android:label="Mapa de Propiedades"
+        tools:layout="@layout/fragment_mapa" />
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.example.inmueblecheck.AboutFragment"
+        android:label="Acerca de"
+        tools:layout="@layout/fragment_about" />
 
 </navigation>
