--- a/app/src/main/res/menu/activity_main_drawer_arrendador.xml
+++ b/app/src/main/res/menu/activity_main_drawer_arrendador.xml
@@ -12,6 +12,11 @@
             android:id="@+id/nav_crear_inmueble"
             android:icon="@drawable/ic_add"
             android:title="Agregar Inmueble" />
+        <!-- NUEVO ITEM -->
+        <item
+            android:id="@+id/nav_historial"
+            android:icon="@android:drawable/ic_menu_recent_history"
+            android:title="Historial (Rentados/Vendidos)" />
     </group>
 
     <item android:title="Más">
