--- a/app/src/main/res/xml/nav_auth.xml
+++ b/app/src/main/res/xml/nav_auth.xml
@@ -99,5 +99,10 @@
         android:name="com.example.inmueblecheck.AboutFragment"
         android:label="Acerca de"
         tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/historialFragment"
+        android:name="com.example.inmueblecheck.HistorialFragment"
+        android:label="Historial"
+        tools:layout="@layout/fragment_gerente_dashboard" />
 
 </navigation>
