Versión 2.0: Chat integrado, Filtros de Mapa y Correcciones de UI

--- a/app/src/main/res/menu/activity_main_drawer_arrendatario.xml
+++ b/app/src/main/res/menu/activity_main_drawer_arrendatario.xml
@@ -12,6 +12,10 @@
             android:id="@+id/nav_mapa"
             android:icon="@android:drawable/ic_dialog_map"
             android:title="Mapa Interactivo" />
+        <item
+            android:id="@+id/nav_mensajes"
+            android:icon="@android:drawable/ic_dialog_email"
+            android:title="Mensajes" />
     </group>
 
     <item android:title="Filtros">
