--- a/app/src/main/res/menu/activity_main_drawer_arrendador.xml
+++ b/app/src/main/res/menu/activity_main_drawer_arrendador.xml
@@ -17,6 +17,10 @@
             android:id="@+id/nav_historial"
             android:icon="@android:drawable/ic_menu_recent_history"
             android:title="Historial (Rentados/Vendidos)" />
+        <item
+            android:id="@+id/nav_mensajes"
+            android:icon="@android:drawable/ic_dialog_email"
+            android:title="Mensajes" />
     </group>
 
     <item android:title="Más">
