--- a/app/src/main/res/color/bg_chip_filter.xml
+++ b/app/src/main/res/color/bg_chip_filter.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Estado Seleccionado: Azul InmuebleCheck -->
+    <!-- Estado Seleccionado: Azul  -->
     <item android:color="@color/blue_primary" android:state_checked="true" />
 
     <!-- Estado Normal: Blanco -->
