--- a/app/src/main/res/drawable/bg_message_other.xml
+++ b/app/src/main/res/drawable/bg_message_other.xml
@@ -2,11 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- Color de fondo para el mensaje del usuario actual -->
-    <solid android:color="#007AFF" />
-
-    <!-- Esquinas redondeadas para el contenedor del mensaje -->
+    <solid android:color="#E5E5EA" />
     <corners android:radius="8dp" />
 
 </shape>
-
