--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -1,46 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
 
-    <!-- Contenedor del mensaje -->
-    <LinearLayout
-        android:id="@+id/messageContainer"
+    <TextView
+        android:id="@+id/tvMessageMe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_launcher_background"
-        android:orientation="vertical"
-        android:padding="12dp"
-        android:layout_gravity="start">
+        android:background="@drawable/bg_message_me"
+        android:maxWidth="280dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="10dp"
+        android:text="Hola, ¿sigue disponible?"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="8dp"/>
 
-        <TextView
-            android:id="@+id/tvSender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="usuario@email.com"
-            android:textSize="10sp"
-            android:textColor="#555555"
-            android:layout_marginBottom="4dp"/>
+    <TextView
+        android:id="@+id/tvTimeMe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10:30 AM"
+        android:textColor="@color/gray_text"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="@+id/tvMessageMe"
+        app:layout_constraintTop_toBottomOf="@+id/tvMessageMe"
+        android:layout_marginTop="2dp"/>
 
-        <TextView
-            android:id="@+id/tvMessageText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mensaje..."
-            android:textSize="16sp"
-            android:textColor="#000000"/>
+    <TextView
+        android:id="@+id/tvMessageOther"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_message_other"
+        android:maxWidth="280dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="10dp"
+        android:text="Sí, claro."
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="8dp"/>
 
-        <TextView
-            android:id="@+id/tvTimestamp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10:30 AM"
-            android:textSize="10sp"
-            android:layout_gravity="end"
-            android:textColor="#777777"
-            android:layout_marginTop="4dp"/>
+    <TextView
+        android:id="@+id/tvTimeOther"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10:31 AM"
+        android:textColor="@color/gray_text"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="@+id/tvMessageOther"
+        app:layout_constraintTop_toBottomOf="@+id/tvMessageOther"
+        android:layout_marginTop="2dp"/>
 
-    </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
